# ft_vox

./: .gitignore  CMakeLists.txt  CMakeSettings.json  Camera.cpp  Camera.hpp  Makefile  compile_flags.txt  ft_vox  main.cpp  main.hpp
include/: BaseMesh.hpp  Camera.hpp  Chunk.hpp  ChunkMesh.hpp  Cube.hpp  InputHandler.hpp  Player.hpp  QuadMesh.hpp  Scene.hpp  Settings.hpp  ShaderProgram.hpp  Texture.hpp  Textures.hpp  VoxelEngine.hpp  VoxelHandler.hpp  World.hpp  chunk_mesh_builder.hpp  main.hpp
shaders/: fragment.glsl  vertex.glsl  vertex_shader.glsl
src/: BaseMesh.cpp  Camera.cpp  Chunk.cpp  ChunkMesh.cpp  Cube.cpp  InputHandler.cpp  Player.cpp  QuadMesh.cpp  Scene.cpp  ShaderProgram.cpp  Texture.cpp  Textures.cpp  VoxelEngine.cpp  VoxelHandler.cpp  World.cpp  chunk_mesh_builder.cpp  main.cpp
